--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 header h1{
     color: cornflowerblue;
 }
+nav ul {
+padding: 0%;
+}
 nav ul li {
     float: left;
     list-style-type: none;
@@ -17,5 +20,5 @@ main h1{
     clear: both;
 }
 footer{
-    text-align: center;
+  text-align: center;
 }
